--- a/BDS_REG_NO.html
+++ b/BDS_REG_NO.html
@@ -143,7 +143,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Born</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dob}}</p>
+                                        <p class="result">{{credentialSubject.dateOfBirth}}</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Fee receipt No.</p>
