--- a/CORRECTED_PRO.html
+++ b/CORRECTED_PRO.html
@@ -137,7 +137,7 @@
                                     <div class  ="subject1 ">
                                         <p class="title">Born</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dob}}</p>
+                                        <p class="result">{{credentialSubject.dateOfBirth}}</p>
                                     </div>                                
                                     
                                     <div class  ="subject1 ">
