--- a/DH-REG.html
+++ b/DH-REG.html
@@ -113,7 +113,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Born</p>
-                                <p class="result">{{credentialSubject.dob}}</p>
+                                <p class="result">{{credentialSubject.dateOfBirth}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Fee Recei[t No.</p>
