--- a/NOC medical.html
+++ b/NOC medical.html
@@ -92,7 +92,7 @@
 
                             <div>
                                 <br>
-                                <p>Subject :- <u> No Objection Certificate of<b> {{credentialSubject.name}}</b> Registration No. <b>{{credentialSubject.registrationPart}} -
+                                <p>Subject :- <u> No Objection Certificate of<b> {{credentialSubject.name}}</b> Registration No. <b>{
 {{credentialSubject.regNumber}}</b></u></p>
                             </div>
                             <div class="para">
