--- a/NOC.html
+++ b/NOC.html
@@ -91,7 +91,7 @@
 
                             <div>
                                 <br>
-                                <p>Subject :- <u>Issue of No Objection Certificate<b> {{credentialSubject.name}}</b> Registration No. <b>{{credentialSubject.registrationPart}}-
+                                <p>Subject :- <u>Issue of No Objection Certificate<b> {{credentialSubject.name}}</b> Registration No. <b>
 {{credentialSubject.regNumber}}</b></u></p>
                             </div>
                             <div class="para">
