--- a/PRO.html
+++ b/PRO.html
@@ -85,7 +85,7 @@
                         <div class="en-details">
                             <div class="subject number">
                                 <p class="title">Registration in Part</p>
-                                <p class="result">{{credentialSubject.registrationPart}}</p>
+                                <p class="result">{{credentialSubject.regNumber}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">Name</p>
@@ -137,7 +137,7 @@
                                     
                                     <div class  ="subject1 ">
                                         <p class="title">Born</p>
-                                        <p class="result">{{credentialSubject.dob}}</p>
+                                        <p class="result">{{credentialSubject.dateOfBirth}}</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Fee Receipt No.</p>
