--- a/REISSUE-BDS.html
+++ b/REISSUE-BDS.html
@@ -82,7 +82,7 @@
                         <div class="en-details">
                             <div class="subject number">
                                 <p class="title">Registration in Part</p>
-                                <p class="result">{{credentialSubject.registrationPart}}</p>
+                                <p class="result">{{credentialSubject.regNumber}}</p>
                             </div>
                             <div class="subject name">
                                 <p class="title">Name</p>
@@ -122,7 +122,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">This certificate shall remain inforce upto :-</p>
-                                <p class="result">{{credentialSubject.validityFrom}} To {{credentialSubject.validityUpto}}</p>
+                                <p class="result">{{{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} To {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Underwent rotatory Internship Training from</p>
