--- a/registration-certificate.html
+++ b/registration-certificate.html
@@ -121,7 +121,7 @@
                         
                         <div class="f-division">
                             <div class="profile-scan">
-                                <div class="studentID"><img src="{{credentialSubject.candiadtePic}}" alt="student ID Photo"></div>
+                                <div class="studentID"><img src="{{credentialSubject.candidatePic}}" alt="student ID Photo"></div>
     
                             </div>
                             <div class="org-section text-center primary-color">
