--- a/CME.html
+++ b/CME.html
@@ -79,7 +79,7 @@
                             <div class="tobody">
                                 <span class="d-block"><b>{{credentialSubject.name}},</b></span>
                                 <span class="d-block">Organising Secretary,</span>
-                                <span class="d-block">{{credentialSubject.address}}</span>
+                                <span class="d-block">{</span>
                                 
 
                             </div>
@@ -93,8 +93,8 @@
                                 <p class="c-block">Please refer your letter dated received 23 Jun 2023 by online mode. It is noted that the
                                     <b>{{credentialSubject.trainingCenter}} </b>is conducting the Workshop/ Seminar/ Conference/
                                     CME/Webinar/Live Surgery <b>5TH ANNUAL FOUNDATION DAY CME ON "RECENT ADVANCES
-                                    IN CARDIOVASCULAR AND THORACIC SURGERY: NEW PARADI</b> on 15/07/2023 to
-                                    16/07/2023 at Lecture Theatre Complex, SGPGIMS, Lucknow.</p><br>
+                                    IN CARDIOVASCULAR AND THORACIC SURGERY: NEW PARADI</b> on {{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} to
+                                    {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}} at Lecture Theatre Complex, SGPGIMS, Lucknow.</p><br>
                                     <p class="c-block">It is also noted that CME will be imparted during the conference by the organizer. Since
                                         U.P. Medical Council has no policy of Accreditation of CME points of its own. At present it
                                         has been decided that the norms for Accreditation CME points as per NMC, New Delhi CME
