--- a/CORRECTION-provision.html
+++ b/CORRECTION-provision.html
@@ -134,7 +134,7 @@
                             <div class="subject1 ">
                                 <p class="title1">Corrected On</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.correctedOn}}</p>
+                                <p class="result">{{credentialSubject.dated}}</p>
                             </div>
                            
                         </div>
