--- a/Diploma-corrected.html
+++ b/Diploma-corrected.html
@@ -114,12 +114,12 @@
                                     <div class="subject1 ">
                                         <p class="title">Corrected On</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.correctedOn}}</p>
+                                        <p class="result">{{credentialSubject.dated}}</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Corrected Fee Receipt No</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.correctedFeeReceiptNo}}</p>
+                                        <p class="result">{{credentialSubject.eeReciptNo}}</p>
                                     </div>                                                                                                            
                                 </div>
                                 <div class="row1">
