--- a/duplicate-r.html
+++ b/duplicate-r.html
@@ -126,7 +126,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Duplicate Issued On</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.duplicateDate}}</p>
+                                        <p class="result">{{credentialSubject.dated}}</p>
                                     </div>                                    
                                 </div>
                                 <div class="row1">
