--- a/Matrimony-Name-Change.additional.html
+++ b/Matrimony-Name-Change.additional.html
@@ -77,7 +77,7 @@
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.trainingCenter}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UNIVERSITY :</font>{{credentialSubject.university}}</p>
                             </div>
-                            <p><font style='color:#2020a7'>Name change after Matrimony issued on</font>: {{credentialSubject.nameChangeDate}}</p>
+                            <p><font style='color:#2020a7'>Name change after Matrimony issued on</font>: {{credentialSubject.dated}}</p>
                             <div class="s-division">
                                 <div class="row">  
                                     <p class="small opt-8">U.P. Medical Council has the right to cancel the certificate, if any information is found to be incorrect or fake.
