--- a/name-change.html
+++ b/name-change.html
@@ -126,7 +126,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Name change after Matrimony issued on</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.nameChangeDate}}</p>
+                                        <p class="result">{{credentialSubject.dated}}</p>
                                     </div>                                    
                                 </div>
                                 <div class="row1">
