--- a/NOC.html
+++ b/NOC.html
@@ -98,7 +98,7 @@
                                 <span class="d-block">Dear Sir/Madam,</span><br>
                                 <p class="c-block">It is certified that after having verified of all the documents of BDS qualification of
                                    <u><b>{{credentialSubject.name}}</b></u>  who has been registered under part-A with U.P. State Dental
-                                    Council as per provision of the Dentists Act, 1948, on <b>{{credentialSubject.dated}}</b> with registration No.<b> {{credentialSubject.regNumber}}-{{credentialSubject.registrationPart}}.</b>
+                                    Council as per provision of the Dentists Act, 1948, on <b>{{credentialSubject.dated}}</b> with registration No.<b> {{credentialSubject.regNumber}}.</b>
                                     The applicant dentist possesses the recognized dental qualification and eligible for registration or
                                     to continue her/his registration under the relevent provision of the Dentists Act.</p><br>
                                     <p class="c-block">She/he vide her/his application dated <b>{{credentialSubject.dated}}</b> requested for transfer of her/his registration
