--- a/COORECTION-permanent.html
+++ b/COORECTION-permanent.html
@@ -103,7 +103,7 @@
                             <div class="subject address">
                                 <p class="title">Qualification</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.qualification}}</p>
+                                <p class="result">{{credentialSubject.courseName}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">University</p>
@@ -134,7 +134,7 @@
                             <div class="subject1 ">
                                 <p class="title1">Corrected On</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.correctedOn}}</p>
+                                <p class="result">{{credentialSubject.dated}}</p>
                             </div>
                             
                             <div class="s-division">
