--- a/CORRECTED_PRO.html
+++ b/CORRECTED_PRO.html
@@ -101,7 +101,7 @@
                             </div>
                             <div class="subject address">
                                 <p class="title">Qualification</p>
-                                <p class="result">{{credentialSubject.qualification}}</p>
+                                <p class="result">{{credentialSubject.courseName}}</p>
                             </div>
                             <div class="subject center">
                                 <p class="title">Year of Passing</p>
@@ -148,7 +148,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Corrected on</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.correctedOn}}</p>
+                                        <p class="result">{{credentialSubject.dated}}</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Correction Fee receipt No.</p>
