--- a/DH-REG.html
+++ b/DH-REG.html
@@ -75,7 +75,7 @@
                     <div class="mainSection">
                         <div class="en-details">
                             <div class="annot">
-                                <p >This is to certify that the person named below has been registered as a DENTIST HYGIENISTS in the Uttar Pradesh under the provision of Dentists' Act, 1948</p>
+                                <p >This is to certify that the person named below has been registered as a {{credentialSubject.courseName}} in the Uttar Pradesh under the provision of Dentists' Act, 1948</p>
                             </div>
                         </div>
                         <div class="en-details">
@@ -97,7 +97,7 @@
                             </div>
                             <div class="subject address">
                                 <p class="title">Qualification with particulars</p>
-                                <p class="result">{{credentialSubject.qualification}}</p>
+                                <p class="result">{{credentialSubject.courseName}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
