--- a/MBBS-permanent-foreign.html
+++ b/MBBS-permanent-foreign.html
@@ -103,7 +103,7 @@
                             <div class="subject address">
                                 <p class="title">Qualification</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.qualification}}</p>
+                                <p class="result">{{credentialSubject.courseName}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">University</p>
