--- a/REISSUE-BDS.html
+++ b/REISSUE-BDS.html
@@ -138,7 +138,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Born</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dob}}</p>
+                                        <p class="result">{{credentialSubject.dateOfBirth}}</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Fee Detail</p>
