--- a/ADDITIONAL_UP_WC.html
+++ b/ADDITIONAL_UP_WC.html
@@ -53,7 +53,7 @@
 					
                    					<div class="s-division">
                         <div class="row">
-                                <p class="title1">{{credentialSubject.state}} - 2018105004</p>
+                                <p class="title1">{{credentialSubject.state}}</p>
                         </div>
                     </div>
                 </header>
