--- a/BDS-REG-24987.html
+++ b/BDS-REG-24987.html
@@ -105,7 +105,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">College</p>
-                                <p class="result">{{credentialSubject.College}}</p>
+                                <p class="result">{{credentialSubject.nursingCollege}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">University</p>
@@ -161,6 +161,7 @@
                         <div class="f-division">
                             <div class="profile-scan">
                                 <div class="studentID"><img src="{{credentialSubject.candidatePic}}" alt="student ID Photo"></div>
+				                                <div class="studentID"><img src="{{credentialSubject.candidateSignature}}" alt="candidateSignature"></div>                                    
     
                             </div>
                             <div class="profile-scan1">
