--- a/BDS_REG_DUPLICATE.html
+++ b/BDS_REG_DUPLICATE.html
@@ -106,7 +106,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">College</p>
-                                <p class="result">{{credentialSubject.nursingCollege}}</p>
+                                <p class="result">{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">University</p>
