--- a/DH-REG.html
+++ b/DH-REG.html
@@ -138,6 +138,7 @@
                         <div class="f-division">
                             <div class="profile-scan">
                                 <div class="studentID"><img src="{{credentialSubject.candidatePic}}" alt="student ID Photo"></div>
+				                                    <div class="studentID"><img src="{{credentialSubject.candidateSignature}}" alt="candidateSignature"></div>                                
     
                             </div>
                             <div class="profile-scan1">
