--- a/MDS-REG.html
+++ b/MDS-REG.html
@@ -68,8 +68,8 @@
                         <div class="en-details">
                             <div class="annot">
                                 <p ><font style='color:#2020a7'>I here by certified that Dr.</font> {{credentialSubject.name}} <font style='color:#2020a7'>Mother's Name Smt.</font> {{credentialSubject.mothersName}} <font style='color:#2020a7'>Father's Name </font>
-                                    {{credentialSubject.fathersName}} <font style='color:#2020a7'> R/o</font> {{credentialSubject.address}}<font style='color:#2020a7'> is registered under Dentist's Act.1948 under part{{credentialSubject.registrationPart}} (DENTIST) on the registration No</font> {{credentialSubject.regNumber}} <font style='color:#2020a7'>dated</font> {{credentialSubject.dated}}.</p>
-                                    <p><font style='color:#2020a7'>He/She studied from </font>{{credentialSubject.university}}<font style='color:#2020a7'> and has obtained following additional qualification from </font>{{credentialSubject.College}}</p>
+                                    {{credentialSubject.fathersName}} <font style='color:#2020a7'> R/o</font> {{credentialSubject.address}}<font style='color:#2020a7'> is registered under Dentist's Act.1948 under part{{credentialSubject.regNumber}} (DENTIST) on the registration No</font> {{credentialSubject.regNumber}} <font style='color:#2020a7'>dated</font> {{credentialSubject.dated}}.</p>
+                                    <p><font style='color:#2020a7'>He/She studied from </font>{{credentialSubject.university}}<font style='color:#2020a7'> and has obtained following additional qualification from </font>{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="j-division">
                                 <p ><font style='color:#2020a7'>1 - </font> {{credentialSubject.courseName}}</p>
