--- a/REISSUE-BDS-WC.html
+++ b/REISSUE-BDS-WC.html
@@ -107,7 +107,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">College</p>
-                                <p class="result">{{credentialSubject.College}}</p>
+                                <p class="result">{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">University</p>
@@ -164,6 +164,7 @@
                         <div class="f-division">
                             <div class="profile-scan">
                                 <div class="studentID"><img src="{{credentialSubject.candidatePic}}" alt="student ID Photo"></div>
+				                                    <div class="studentID"><img src="{{credentialSubject.candidateSignature}}" alt="candidateSignature"></div>                                
     
                             </div>
                             
