--- a/MBBS-Permanent-Registration-Certificate-UP-WC.html
+++ b/MBBS-Permanent-Registration-Certificate-UP-WC.html
@@ -116,7 +116,7 @@
                             <div class="subject passyear">
                                 <p class="title">College</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.College}}</p>
+                                <p class="result">{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="subject center">
                                 <p class="title">Year of Passing</p>
@@ -158,6 +158,7 @@
                         <div class="f-division">
                             <div class="profile-scan">
                                 <div class="studentID"><img src="{{credentialSubject.candidatePic}}" alt="student ID Photo"></div>
+				                                    <div class="studentID"><img src="{{credentialSubject.candidateSignature}}" alt="candidateSignature"></div>                                
     
                             </div>
                             <div class="org-section">
