--- a/MBBS-permanent.html
+++ b/MBBS-permanent.html
@@ -113,7 +113,7 @@
                             <div class="subject passyear">
                                 <p class="title">College</p>
                                 <p class="sep">:</p>
-                                <p class="result"> {{credentialSubject.College}}</p>
+                                <p class="result"> {{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="subject center">
                                 <p class="title">Year of Passing</p>
@@ -155,6 +155,7 @@
                         <div class="f-division">
                             <div class="profile-scan">
                                 <div class="studentID"><img src="{{credentialSubject.candidatePic}}" alt="student ID Photo"></div>
+				                                    <div class="studentID"><img src="{{credentialSubject.candidateSignature}}" alt="candidateSignature"></div>                                
     
                             </div>
                             <div class="org-section">
