--- a/Additional-Registration-WC.html
+++ b/Additional-Registration-WC.html
@@ -75,7 +75,7 @@
                             </div>
                             <div class="j-division">
                                 <p >-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{credentialSubject.courseName}}</p>
-                                <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.trainingCenter}}</p>
+                                <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.nursingCollage}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UNIVERSITY :</font>{{credentialSubject.university}}</p>
                             </div>
                             <div class="s-division">
