--- a/CORRECTION-OTHER.html
+++ b/CORRECTION-OTHER.html
@@ -78,7 +78,7 @@
                             </div>
                             <div class="j-division">
                                 <p >-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{credentialSubject.courseName}}</p>
-                                <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.College}}</p>
+                                <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.nursingCollage}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UNIVERSITY :</font>{{credentialSubject.university}}</p>
                             </div>
                             <p><font style='color:#2020a7'>Correction on</font>: {{credentialSubject.dated}}</p>
