--- a/Diploma-corrected-WC.html
+++ b/Diploma-corrected-WC.html
@@ -120,7 +120,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Corrected Fee Receipt No</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.eeReciptNo}}</p>
+                                        <p class="result">{{credentialSubject.feeReciptNo}}</p>
                                     </div>                                                                                                            
                                 </div>
                                 <div class="row1">
