--- a/Matrimonial-name-change.html
+++ b/Matrimonial-name-change.html
@@ -119,7 +119,7 @@
                             <div class="subject passyear">
                                 <p class="title">College</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.College}}</p>
+                                <p class="result">{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="subject center">
                                 <p class="title">Year of Passing</p>
