--- a/Matrimony-Name-Change.additional-WC.html
+++ b/Matrimony-Name-Change.additional-WC.html
@@ -75,7 +75,7 @@
                             </div>
                             <div class="j-division">
                                 <p >-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{credentialSubject.CcourseName}}</p>
-                                <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.trainingCenter}}</p>
+                                <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.nursingCollage}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UNIVERSITY :</font>{{credentialSubject.university}}</p>
                             </div>
                             <p><font style='color:#2020a7'>Name change after Matrimony issued on</font>: {{credentialSubject.dated}}</p>
