--- a/NOC-0001.html
+++ b/NOC-0001.html
@@ -119,7 +119,7 @@
                                     <td><b>{{credentialSubject.regNumber}}</b><br>{{credentialSubject.dated}}</td>
                                     <td><b>{{credentialSubject.name}}</b><br>{{credentialSubject.fathersName}}</td>
                                     <td>{{credentialSubject.qualification}}<br></td>
-                                    <td>{{credentialSubject.trainingCenter}}<br></td>
+                                    <td>{{credentialSubject.nursingCollage}}<br></td>
                                 </tr>
                             </table>
                             <p>The above information is Correct and this council has No Objection for further registration with your council.</p>
