--- a/NOC-medical.html
+++ b/NOC-medical.html
@@ -98,7 +98,7 @@
                             <div class="para">
                                 <span class="d-block">Sir/Madam,</span><br>
                                 <p class="c-block">I have to inform you that on verification of records it is found that name of <b>{{credentialSubject.name}}</b>
-                                    D/O{{credentialSubject.fathersName}} M.B.B.S. ({{credentialSubject.trainingCenter}}) bearing U.P. Medical Council Registration No.<b> {{credentialSubject.regNumber}}</b> Dated <b>{{credentialSubject.dated}} </b>is borne on the register of
+                                    D/O{{credentialSubject.fathersName}} M.B.B.S. ({{credentialSubject.nursingCollage}}) bearing U.P. Medical Council Registration No.<b> {{credentialSubject.regNumber}}</b> Dated <b>{{credentialSubject.dated}} </b>is borne on the register of
                                     Registered Medical Practitioner maintained by this Council & his/her said registration is still in force and no
                                     disciplinary proceeding has been taken against him/her in past nor is in process till date under U.P. Medical Act.</p><br>
                                     
