--- a/bsc-r-corr.html
+++ b/bsc-r-corr.html
@@ -126,7 +126,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Corrected On</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.correctedOn}}</p>
+                                        <p class="result">{{credentialSubject.dated}}</p>
                                     </div>
                                 </div>
                                 <div class="row1">
