--- a/BDS_REG_STATE.html
+++ b/BDS_REG_STATE.html
@@ -129,7 +129,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Underwent rotatory Internship Training from</p>
-                                <p class="result">{{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}}-{{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}} at{{credentialSubject.College}}</p>
+                                <p class="result">{{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}}-{{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}} at{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="s-division">
                                 <div class="row">
