--- a/Matrimony-Name-Change.additional.html
+++ b/Matrimony-Name-Change.additional.html
@@ -73,7 +73,7 @@
                                         <br><font style='color:#2020a7'>She has obtained the following Additional Qualification:</font></p>
                             </div>
                             <div class="j-division">
-                                <p >-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{credentialSubject.CcourseName}}</p>
+                                <p >-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{credentialSubject.courseName}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.nursingCollage}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UNIVERSITY :</font>{{credentialSubject.university}}</p>
                             </div>
