--- a/name-change.html
+++ b/name-change.html
@@ -144,6 +144,7 @@
                         <div class="f-division">
                             <div class="profile-scan">
                                 <div class="studentID"><img src="{{credentialSubject.candidatePic}}" alt="student ID Photo"></div>
+				    <div class="studentID"><img src="{{credentialSubject.candidateSignature}}" alt="candidateSignature"></div>
     
                             </div>
                             <div class="org-section text-center primary-color">
