--- a/BDS_REG_NO_WC.html
+++ b/BDS_REG_NO_WC.html
@@ -51,7 +51,7 @@
                 <header>
                                       					<div class="s-division">
                         <div class="row">
-                                <p class="title1">{{credentialSubject.state}} - {credentialSubject.registrationNumber}}{credentialSubject.registrationPart}}</p>
+                                <p class="title1">{{credentialSubject.state}} - {credentialSubject.regNumber}}</p>
                         </div>
                     </div>
                     <h3>UTTAR PRADESH DENTAL COUNCIL</h3>
