--- a/CORRECTION-OTHER-WC.html
+++ b/CORRECTION-OTHER-WC.html
@@ -52,7 +52,7 @@
                 <header>
 					<div class="s-division">
                         <div class="row">
-                                <p class="title1">{{credentialSubject.state}} - 2018105004</p>
+                                <p class="title1">{{credentialSubject.state}}</p>
                         </div>
                     </div>
                    
