--- a/MBBS-permanent-R-WC.html
+++ b/MBBS-permanent-R-WC.html
@@ -53,7 +53,7 @@
             <div class="bg-upsmf"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/mclogoc.jpg" alt="upsmf watermark images"></div>
             <div class="cc-container">
                 <header>
-                    <p class="reg-no"><font style="color:blue">{{credentialSubject.state}}</font> - 85026</p>
+                    <p class="reg-no"><font style="color:blue">{{credentialSubject.state}}</font> </p>
 
                    
                     <h3>MEDICAL REGISTRATION CERTIFICATE</h3>
