--- a/registration-certificate-WC.html
+++ b/registration-certificate-WC.html
@@ -88,7 +88,7 @@
                             <div class="subject center">
                                 <p class="title">Training Center</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingCenter}</p>
+                                <p class="result">{{credentialSubject.trainingCenter}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Year of Passing</p>
