--- a/Additional-Registration-WC.html
+++ b/Additional-Registration-WC.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="row">
                                 <p class="title1">Dated </p>
-                                <p>: {{credentialSubject.dated}}</p>
+                                <p>: {{credentialSubject.nurseRegDate}}</p>
                             </div>
                         </div>
                         <div class="en-details">
