--- a/BDS_REG_NO.html
+++ b/BDS_REG_NO.html
@@ -117,7 +117,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
-                                <p class="result">{{credentialSubject.dated}} & {{credentialSubject.place}}</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}} & {{credentialSubject.place}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Address</p>
