--- a/BDS_REG_DUPLICATE.html
+++ b/BDS_REG_DUPLICATE.html
@@ -181,7 +181,7 @@
 			                                           <div class="subject1 ">
                                         <p class="title">Duplicate On</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dated}}</p>
+                                        <p class="result">{{credentialSubject.nurseRegDate}}</p>
                                     </div>
                     </footer>
             </div>
