--- a/REISSUE-BDS-WC.html
+++ b/REISSUE-BDS-WC.html
@@ -115,7 +115,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
-                                <p class="result">{{credentialSubject.dated}} & Lucknow</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}} & Lucknow</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Address</p>
@@ -182,7 +182,7 @@
 			                                           <div class="subject1 ">
                                         <p class="title">Reissued On</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dated}}</p>
+                                        <p class="result">{{credentialSubject.nurseRegDate}}</p>
                                     </div>
                     </footer>
             </div>
