--- a/CME.html
+++ b/CME.html
@@ -63,7 +63,7 @@
                         <div class="row">
                             <p class="title1">Ref. No. {{credentialSubject.refNo}}</p>
                             <div class="top-logo"><img src="https://raw.githubusercontent.com/kumarpawantarento/templates/main/img/mclogoc.jpg" alt="upsmf logo images"></div>
-                            <p class="title1">Date: {{credentialSubject.dated}}</p>
+                            <p class="title1">Date: {{credentialSubject.nurseRegDate}}</p>
                         </div>
                     </div>
                 </header>
