--- a/degree-WC.html
+++ b/degree-WC.html
@@ -88,7 +88,7 @@
                             <div class="subject center">
                                 <p class="title">Training Center</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingCenter}}</p>
+                                <p class="result">{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="subject center">
                                 <p class="title">University</p>
