--- a/Additional-Registration-WC.html
+++ b/Additional-Registration-WC.html
@@ -70,7 +70,7 @@
                             <div class="annot">
                                 <p ><font style='color:#2020a7'>I here by certified that Mr.</font> {{credentialSubject.name}}<font style='color:#2020a7'> S/O</font>{{credentialSubject.mothersName}}&
                                    {{credentialSubject.fathersName}} <font style='color:#2020a7'> R/o</font> {{credentialSubject.address}}<font style='color:#2020a7'> is registered
-                                        on the Registration No.</font> {{credentialSubject.regNumber}}<font style='color:#2020a7'> dated</font> {{credentialSubject.dated}}<font style='color:#2020a7'> (vide Schedule I/II/III - M.B.B.S.).</font>
+                                        on the Registration No.</font> {{credentialSubject.regNumber}}<font style='color:#2020a7'> dated</font> {{credentialSubject.nurseRegDate}}<font style='color:#2020a7'> (vide Schedule I/II/III - M.B.B.S.).</font>
                                         <br><font style='color:#2020a7'>He has obtained the following Additional Qualification:</font></p>
                             </div>
                             <div class="j-division">
