--- a/CME.html
+++ b/CME.html
@@ -91,7 +91,7 @@
                             <div class="para">
                                 <span class="d-block">Sir/Madam,</span><br>
                                 <p class="c-block">Please refer your letter dated received 23 Jun 2023 by online mode. It is noted that the
-                                    <b>{{credentialSubject.trainingCenter}} </b>is conducting the Workshop/ Seminar/ Conference/
+                                    <b>{{credentialSubject.nursingCollage}} </b>is conducting the Workshop/ Seminar/ Conference/
                                     CME/Webinar/Live Surgery <b>5TH ANNUAL FOUNDATION DAY CME ON "RECENT ADVANCES
                                     IN CARDIOVASCULAR AND THORACIC SURGERY: NEW PARADI</b> on {{credentialSubject.joiningMonth}}-{{credentialSubject.joiningYear}} to
                                     {{credentialSubject.passingMonth}}-{{credentialSubject.passingYear}} at Lecture Theatre Complex, SGPGIMS, Lucknow.</p><br>
