--- a/COORECTION-permanent-WC.html
+++ b/COORECTION-permanent-WC.html
@@ -124,7 +124,7 @@
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.dated}}, Lucknow(U.P)</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}}, Lucknow(U.P)</p>
                             </div>
                             <div >
                                 <p><font style="color:blue">Schedule of the Indian Medical Council Act, 1956</font><b>{{credentialSubject.schedule}}</b></p>
@@ -135,7 +135,7 @@
                             <div class="subject1 ">
                                 <p class="title1">Corrected On</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.dated}}</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}}</p>
                             </div>
                             
                             <div class="s-division">
