--- a/CORRECTED_PRO.html
+++ b/CORRECTED_PRO.html
@@ -68,7 +68,7 @@
 						<div class="row1">
                             <div class="number">
                                 <p class="title2">Dated :</p>
-                                <p> {{credentialSubject.dated}}</p>
+                                <p> {{credentialSubject.nurseRegDate}}</p>
                             </div>
 							
 						</div>
@@ -117,7 +117,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
-                                <p class="result">{{credentialSubject.dated}}  Lucknow</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}}  Lucknow</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Address</p>
@@ -148,7 +148,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Corrected on</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dated}}</p>
+                                        <p class="result">{{credentialSubject.nurseRegDate}}</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Correction Fee receipt No.</p>
