--- a/DH-REG.html
+++ b/DH-REG.html
@@ -101,7 +101,7 @@
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
-                                <p class="result">{{credentialSubject.dated}},Lucknow</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}},Lucknow</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Address</p>
