--- a/Diploma-corrected-WC.html
+++ b/Diploma-corrected-WC.html
@@ -88,7 +88,7 @@
                             <div class="subject center">
                                 <p class="title">Training Center</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.trainingCenter}}</p>
+                                <p class="result">{{credentialSubject.nursingCollage}}</p>
                             </div>
                             <div class="subject passyear">
                                 <p class="title">Year of Passing</p>
@@ -105,7 +105,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Dated</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dated}}</p>
+                                        <p class="result">{{credentialSubject.nurseRegDate}}</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Fee Receipt No</p>
@@ -115,7 +115,7 @@
                                     <div class="subject1 ">
                                         <p class="title">Corrected On</p>
                                         <p class="sep">:</p>
-                                        <p class="result">{{credentialSubject.dated}}</p>
+                                        <p class="result">{{credentialSubject.nurseRegDate}}</p>
                                     </div>
                                     <div class="subject1 ">
                                         <p class="title">Corrected Fee Receipt No</p>
