--- a/MBBS-permanent-foreign.html
+++ b/MBBS-permanent-foreign.html
@@ -68,7 +68,7 @@
 						<div class="row1">
                             <div class="number">
                                 <p class="title2">Dated :</p>
-                                <p> {{credentialSubject.dated}}</p>
+                                <p> {{credentialSubject.nurseRegDate}}</p>
                             </div>
 							
 						</div>
@@ -123,7 +123,7 @@
                             <div class="subject passyear">
                                 <p class="title">Date & Place of registration</p>
                                 <p class="sep">:</p>
-                                <p class="result">{{credentialSubject.dated}}, Lucknow(U.P)</p>
+                                <p class="result">{{credentialSubject.nurseRegDate}}, Lucknow(U.P)</p>
                             </div>
                             <div >
                                 <p><font style="color:blue">Schedule of the Indian Medical Council Act, 1956</font><b>{{credentialSubject.schedule}}</b></p>
