--- a/Matrimony-Name-Change.additional-WC.html
+++ b/Matrimony-Name-Change.additional-WC.html
@@ -63,14 +63,14 @@
                             </div>
                             <div class="row">
                                 <p class="title1">Dated </p>
-                                <p>: {{credentialSubject.dated}}</p>
+                                <p>: {{credentialSubject.nurseRegDate}}</p>
                             </div>
                         </div>
                         <div class="en-details">
                             <div class="annot">
                                 <p ><font style='color:#2020a7'>I here by certify that Ms.</font> {{credentialSubject.name}} <font style='color:#2020a7'> S/O</font> {{credentialSubject.mothersName}} &
                                    {{credentialSubject.fathersName}} <font style='color:#2020a7'> R/o</font> {{credentialSubject.address}}<font style='color:#2020a7'> is registered
-                                        on the Registration No.</font> {{credentialSubject.regNumber}}<font style='color:#2020a7'> dated</font> {{credentialSubject.dated}}<font style='color:#2020a7'> (vide Schedule I/II/III - M.B.B.S.).</font>
+                                        on the Registration No.</font> {{credentialSubject.regNumber}}<font style='color:#2020a7'> dated</font> {{credentialSubject.nurseRegDate}}<font style='color:#2020a7'> (vide Schedule I/II/III - M.B.B.S.).</font>
                                         <br><font style='color:#2020a7'>She has obtained the following Additional Qualification:</font></p>
                             </div>
                             <div class="j-division">
@@ -78,7 +78,7 @@
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MEDICAL COLLEGE :</font>{{credentialSubject.nursingCollage}}</p>
                                 <p ><font style='color:#2020a7'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;UNIVERSITY :</font>{{credentialSubject.university}}</p>
                             </div>
-                            <p><font style='color:#2020a7'>Name change after Matrimony issued on</font>: {{credentialSubject.dated}}</p>
+                            <p><font style='color:#2020a7'>Name change after Matrimony issued on</font>: {{credentialSubject.nurseRegDate}}</p>
                             <div class="s-division">
                                 <div class="row">  
                                     <p class="small opt-8">U.P. Medical Council has the right to cancel the certificate, if any information is found to be incorrect or fake.
